# cmpt489-202309-project

./: Phase2_Joseph_Lunderville.odt  pom.xml  prep-venv  qual.sh  results.txt  time.sh
support/BitSpreadGen/: bitspread.ipynb
support/EqClassGen/: eqclassgen.ipynb  synthast.py
support/McmcTest/: mcmctest.ipynb
support/ProblemGen/: gen.cabal
support/ProblemGen/src/: Main.hs
test-data/: 0105.txt  0201.txt  0202.txt  0204.txt  0206.txt  0207.txt  0210.txt  0213.txt  0216.txt  0222.txt  0225.txt  0230.txt  0231.txt  0233.txt  0237.txt  0238.txt  0241.txt  0243.txt  0246.txt  0248.txt  0249.txt  0251.txt  0252.txt  0253.txt  0254.txt  0255.txt  0257.txt  0261.txt  0262.txt  0264.txt  0265.txt  0266.txt  0267.txt  0268.txt  0271.txt  0272.txt  0273.txt  0275.txt  0279.txt  0284.txt  (+136 more)
test-data/phase1/: 0100.txt  0101.txt  0102.txt  0103.txt  0105.txt  0200.txt  0203.txt  0205.txt  0208.txt  0209.txt  0211.txt  0212.txt  0214.txt  0215.txt  0217.txt  0218.txt  0219.txt  0220.txt  0221.txt  0223.txt  0224.txt  0226.txt  0227.txt  0228.txt  0229.txt  0232.txt  0234.txt  0235.txt  0236.txt  0239.txt  0240.txt  0242.txt  0244.txt  0245.txt  0247.txt  0250.txt  0256.txt  0258.txt  0259.txt  0260.txt  (+132 more)
test-data/phase2-noite/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0100.txt  0101.txt  0102.txt  0103.txt  0104.txt  0105.txt  0106.txt  0107.txt  0108.txt  0109.txt  0200.txt  0201.txt  0202.txt  0203.txt  0204.txt  0205.txt  0206.txt  (+173 more)
time-data/: capture-time-phase1.sh  capture-time-phase2.sh  capture-time.sh
(+333 files in other folders)
